--- a/Delixous/Delixous/MainWindow.xaml
+++ b/Delixous/Delixous/MainWindow.xaml
@@ -4,8 +4,30 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        Title="Delixous-Login" Height="570" Width="450" WindowStartupLocation="CenterScreen" Icon="/salad.png"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}" Background="{x:Null}" AllowsTransparency="True"
+        WindowStyle="None">
+
+    <materialDesign:Card x:Name="PrincipalCard" UniformCornerRadius="15" Background="{DynamicResource MaterialDesignPaper}" Margin="25" materialDesign:ShadowAssist.ShadowDepth="Depth4">
+        <materialDesign:DialogHost CloseOnClickAway="True" x:Name="DialogHost">
+            <StackPanel x:Name="StackPanelPrincipal">
+                <materialDesign:PopupBox x:Name="PopupBoxMenu" HorizontalAlignment="Right" Margin="0 20 20 0" VerticalAlignment="Top" PlacementMode="BottomAndAlignRightEdges" StaysOpen="False" Height="25">
+                    <StackPanel>
+                        <StackPanel x:Name="StackPanelMenu" Margin="16 10 0 6" Orientation="Horizontal" HorizontalAlignment="Center">
+                            <TextBlock x:Name="TextBlockDarkMode" VerticalAlignment="Center" Text="Modo Oscuro"></TextBlock>
+                            <ToggleButton x:Name="ThemeToggle" Cursor="Hand" ToolTip="Activar Modo Oscuro" Margin="12 0 8 0" IsChecked="{Binding IsDarkTheme}" Click="ThemeToggle_Click"></ToggleButton>
+                        </StackPanel>
+                        <Button x:Name="ButtonExit" ToolTip="Cerrar Aplicación" Content="Salir de la Aplicación" Click="ButtonExit_Click"></Button>
+                    </StackPanel>
+                </materialDesign:PopupBox>
+                <Image x:Name="ImageLogo" HorizontalAlignment="Center" VerticalAlignment="Top" Source="/salad.png" Height="100" Width="100"></Image>
+                <TextBlock x:Name="TextBlockBienvenido" HorizontalAlignment="Center" Margin="0 10 0 0" Text="¡Bienvenido!" FontSize="28" FontWeight="Bold"></TextBlock>
+                <TextBlock x:Name="TextBlockInfo" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 10 0 0" Text="Ingresa a tu cuenta existente." FontSize="17" FontWeight="SemiBold"></TextBlock>
+                <TextBox x:Name="TextBoxNombreUsuario" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 20 0 0" Width="300" FontSize="18" materialDesign:HintAssist.Hint="Nombre de Usuario" BorderThickness="2" BorderBrush="{DynamicResource MaterialDesignDivider}" Style="{StaticResource MaterialDesignOutlinedTextBox}"></TextBox>
+                <PasswordBox x:Name="TextBoxContraseña" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 20 0 0" Width="300" FontSize="18" materialDesign:HintAssist.Hint="Contraseña" BorderThickness="2" BorderBrush="{DynamicResource MaterialDesignDivider}" Style="{StaticResource MaterialDesignOutlinedPasswordBox}"></PasswordBox>
+                <Button x:Name="ButtonIniciarSesion" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 20 0 0" Height="53" Width="300" FontSize="18" Content="Iniciar Sesión" Style="{StaticResource MaterialDesignFlatMidBgButton}" materialDesign:ShadowAssist.ShadowDepth="Depth0" materialDesign:ButtonAssist.CornerRadius="10"></Button>
+            </StackPanel>
+        </materialDesign:DialogHost>
+    </materialDesign:Card>
 </Window>
